Fix overflow issue

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -1,5 +1,8 @@
 @import 'base'
 
+body, html, #container
+  height: 100%
+
 .post
   margin: 20px auto 0 auto
   @include border-radius(15px)
